tests/valid/prototype-field-init/basic.pts
prototype P {
    int i = 5;
    string s = "hello";
}

function main() : void {
    P p = P.clone();
}
