tests/invalid/type/proto_field_init_self_invalid.pts
prototype P {
    int x = self.x;
}

function main() : void {}
